--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.1.2
   google_fonts: 2.2.0
   provider: ^6.0.4
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
