--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: 2.2.0
   provider: ^6.0.4
   image_picker: ^0.8.5+3
+  flutter_slidable: ^1.3.2
 
 dev_dependencies:
   flutter_test:
