--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.marketplace_exercise">
+    <uses-permission android:name="android.permission.INTERNET"/> <!-- Add this -->2
    <application
         android:label="marketplace_exercise"
         android:icon="@mipmap/ic_launcher">
